--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -34,7 +34,7 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>144</width>
+     <width>201</width>
      <height>96</height>
     </rect>
    </property>
@@ -81,6 +81,49 @@
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>ms</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QGroupBox" name="groupBox">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>110</y>
+     <width>201</width>
+     <height>66</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Printer</string>
+   </property>
+   <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="2">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>X</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QSpinBox" name="bedxbox">
+      <property name="maximum">
+       <number>9999</number>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Bed size</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <widget class="QSpinBox" name="bedybox">
+      <property name="maximum">
+       <number>9999</number>
       </property>
      </widget>
     </item>
