--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -126,6 +126,9 @@
     </item>
     <item row="0" column="1">
      <widget class="QSpinBox" name="bedxbox">
+      <property name="minimum">
+       <number>1</number>
+      </property>
       <property name="maximum">
        <number>9999</number>
       </property>
@@ -140,6 +143,9 @@
     </item>
     <item row="0" column="3">
      <widget class="QSpinBox" name="bedybox">
+      <property name="minimum">
+       <number>1</number>
+      </property>
       <property name="maximum">
        <number>9999</number>
       </property>
