--- a/graphics.qrc
+++ b/graphics.qrc
@@ -2,5 +2,7 @@
     <qresource prefix="/">
         <file>icons/icon.png</file>
         <file>icons/logo.png</file>
+        <file>icons/error_a.png</file>
+        <file>icons/error_b.png</file>
     </qresource>
 </RCC>
