--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -39,7 +39,14 @@
         </widget>
        </item>
        <item row="0" column="1">
-        <widget class="QComboBox" name="serialBox"/>
+        <widget class="QComboBox" name="serialBox">
+         <property name="maximumSize">
+          <size>
+           <width>100</width>
+           <height>16777215</height>
+          </size>
+         </property>
+        </widget>
        </item>
        <item row="1" column="0">
         <widget class="QPushButton" name="connectBtn">
