--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -49,22 +49,6 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
-     <widget class="QSpinBox" name="senderbox">
-      <property name="toolTip">
-       <string>A good default is 5, lower = fater, higher = less CPU load</string>
-      </property>
-      <property name="toolTipDuration">
-       <number>-1</number>
-      </property>
-      <property name="minimum">
-       <number>1</number>
-      </property>
-      <property name="maximum">
-       <number>999</number>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="2">
      <widget class="QLabel" name="label_3">
       <property name="text">
@@ -99,6 +83,28 @@
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>ms</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QDoubleSpinBox" name="senderbox">
+      <property name="toolTip">
+       <string>A good default is 2, lower = fater, higher = less CPU load</string>
+      </property>
+      <property name="toolTipDuration">
+       <number>-1</number>
+      </property>
+      <property name="locale">
+       <locale language="English" country="UnitedStates"/>
+      </property>
+      <property name="minimum">
+       <double>0.100000000000000</double>
+      </property>
+      <property name="maximum">
+       <double>999.990000000000009</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
       </property>
      </widget>
     </item>
