--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -541,7 +541,7 @@
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="title">
      <string>Tools</string>
@@ -592,7 +592,7 @@
   </action>
   <action name="actionPrint_from_SD">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="text">
     <string>Print from SD...</string>
