--- a/sdwindow.ui
+++ b/sdwindow.ui
@@ -35,7 +35,11 @@
     </widget>
    </item>
    <item row="1" column="0">
-    <widget class="QListWidget" name="fileslist"/>
+    <widget class="QListWidget" name="fileslist">
+     <property name="autoScroll">
+      <bool>false</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
