Ui tweaks Added "About Qt"

--- a/graphics.qrc
+++ b/graphics.qrc
@@ -8,5 +8,6 @@
         <file>icons/sd.png</file>
         <file>icons/settings.png</file>
         <file>icons/about.png</file>
+        <file>icons/exit.png</file>
     </qresource>
 </RCC>
