--- a/sdwindow.ui
+++ b/sdwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Print from SD</string>
   </property>
   <property name="windowIcon">
    <iconset resource="graphics.qrc">
