--- a/settingswindow.ui
+++ b/settingswindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>253</width>
-    <height>242</height>
+    <height>330</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,14 +24,17 @@
       <string>Internal</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label">
+      <item row="3" column="0" colspan="3">
+       <widget class="QCheckBox" name="echobox">
+        <property name="toolTip">
+         <string>Show every sent command in console</string>
+        </property>
         <property name="text">
-         <string>Sender</string>
+         <string>Echo commands</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item row="1" column="1">
        <widget class="QDoubleSpinBox" name="senderbox">
         <property name="toolTip">
          <string>A good default is 2, lower = fater, higher = less CPU load. 0 would execute as soon as possible.</string>
@@ -51,23 +54,26 @@
         <property name="singleStep">
          <double>0.100000000000000</double>
         </property>
+        <property name="value">
+         <double>2.000000000000000</double>
+        </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QLabel" name="label_3">
+      <item row="2" column="2">
+       <widget class="QLabel" name="label_4">
         <property name="text">
          <string>ms</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="2" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
          <string>Status</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item row="2" column="1">
        <widget class="QSpinBox" name="statusbox">
         <property name="toolTip">
          <string>A good default is 5000. More = less interruptions, less = better temperature monitoring</string>
@@ -84,19 +90,55 @@
        </widget>
       </item>
       <item row="1" column="2">
-       <widget class="QLabel" name="label_4">
+       <widget class="QLabel" name="label_3">
         <property name="text">
          <string>ms</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0" colspan="3">
-       <widget class="QCheckBox" name="echobox">
-        <property name="toolTip">
-         <string>Show every sent command in console</string>
+      <item row="4" column="0" colspan="3">
+       <widget class="QCheckBox" name="lockbox">
+        <property name="text">
+         <string>Lock controls when printing</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Sender</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QCheckBox" name="checksumbox">
+        <property name="enabled">
+         <bool>false</bool>
         </property>
         <property name="text">
-         <string>Echo commands</string>
+         <string>Checksums</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0" colspan="3">
+       <widget class="QLabel" name="label_7">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>28</height>
+         </size>
+        </property>
+        <property name="text">
+         <string>This settings are applied after restart</string>
+        </property>
+        <property name="textFormat">
+         <enum>Qt::AutoText</enum>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+        <property name="margin">
+         <number>1</number>
         </property>
        </widget>
       </item>
@@ -105,14 +147,20 @@
    </item>
    <item row="1" column="0">
     <widget class="QGroupBox" name="groupBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="title">
       <string>Printer</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="0" column="2">
-       <widget class="QLabel" name="label_6">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>X</string>
+         <string>Bed size</string>
         </property>
        </widget>
       </item>
@@ -126,10 +174,10 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_5">
+      <item row="0" column="2">
+       <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>Bed size</string>
+         <string>X</string>
         </property>
        </widget>
       </item>
